[#156513045] notifications button ie fix

--- a/reactjs/components/atoms/Notifications/Popup/_styles.scss
+++ b/reactjs/components/atoms/Notifications/Popup/_styles.scss
@@ -42,7 +42,7 @@
       text-align: center;
       background-color: $light-blue-grey;
       color: $navy;
-      flex: 1 1 0;
+      flex: 1 1 auto;
       cursor: pointer;
       transition: background-color .2s;
       font-size: 1em;
